Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Tab1.<span class="function">Show</span>() <span class="comment">-- Essential to 
             
             <div class="widget-box">
                 <h4>Full Movement Script (Template)</h4>
-                <pre><code><span class="keyword">local</span> Library = <span class="function">loadstring</span>(game:<span class="function">HttpGet</span>(<span class="string">"..."</span>))()
+                <pre><code><span class="keyword">local</span> Library = <span class="function">loadstring</span>(game:<span class="function">HttpGet</span>(<span class="string">""https://pastes.io/raw/local-library-local-tweenservice-game""</span>))()
 <span class="keyword">local</span> Win = Library:<span class="function">CreateWindow</span>(<span class="string">"Ghost Exploits"</span>)
 <span class="keyword">local</span> Mov = Win:<span class="function">CreateTab</span>(<span class="string">"Movement"</span>)
 
@@ -239,3 +239,4 @@ Mov.<span class="function">Show</span>()</code></pre>
 
 </body>
 </html>
+
